--- a/index.html
+++ b/index.html
@@ -6853,9 +6853,9 @@
               <a href="/contact/" class="nav-contact"><span class="en">Contact</span><span
                   class="ja -sp">お問い合わせ</span></a>
             </li>
-            <li>
-              <a href="/contact/" class="nav-contact"><span class="en">documents</span><span
-                  class="ja -sp">資料請求</span></a>
+            <li style=" margin-left: -30px; font-weight: bold;">
+              <a href="#" class="nav-contact"><span class="en -sp">documents</span><span
+                  class="ja" style="font-weight: bold;">資料請求</span></a>
             </li>
           </ul>
         </nav>
@@ -6875,8 +6875,9 @@
     <div id="main-visual">
       <div class="wrap">
         <picture class="img-copy">
-          <source media="(max-width: 768px)" srcset="images/main_copy_sp.svg">
-          <img src="images/main_copy.svg" alt="行動を創出する核となる">
+          <source media="(max-width: 768px)" srcset="images/main_copy_sp.png">
+          <img src="images/main_copy.png" alt="企業のYouTube活用で
+集客・採用課題を解決 -当社役員がご担当させていただくため、貴社の経営目線に立ったご支援が可能-">
         </picture>
         <div class="img-symbol">
           <img src="images/symbol.svg" alt="">
