--- a/index.html
+++ b/index.html
@@ -6853,9 +6853,9 @@
               <a href="/contact/" class="nav-contact"><span class="en">Contact</span><span
                   class="ja -sp">お問い合わせ</span></a>
             </li>
-            <li style=" margin-left: -30px; font-weight: bold;">
-              <a href="#" class="nav-contact"><span class="en -sp">documents</span><span
-                  class="ja" style="font-weight: bold;">資料請求</span></a>
+            <li class="documents">
+              <a href="#" class="nav-contact"><span class="en -sp">documents</span><span class="ja"
+                  style="font-weight: bold;">資料請求</span></a>
             </li>
           </ul>
         </nav>
