--- a/index.html
+++ b/index.html
@@ -6854,8 +6854,7 @@
                   class="ja -sp">お問い合わせ</span></a>
             </li>
             <li class="documents">
-              <a href="#" class="nav-contact"><span class="en -sp">documents</span><span class="ja"
-                  style="font-weight: bold;">資料請求</span></a>
+              <a href="#" class="nav-contact"><span class="en -sp">documents</span><span class="ja">資料請求</span></a>
             </li>
           </ul>
         </nav>
