--- a/index.html
+++ b/index.html
@@ -39,32 +39,9 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/entry.ca093026.css">
   <link rel="stylesheet" href="css/modal-video.min.css">
-  <link rel="stylesheet" href="scss/_top.scss">
-  <link rel="stylesheet" href="scss/_service.scss">
-  <link rel="stylesheet" href="scss/_recruit.scss">
-  <link rel="stylesheet" href="scss/_privacy.scss">
-  <link rel="stylesheet" href="scss/_about.scss">
+  <link rel="stylesheet" href="style.css">
 
   <meta name="robots" content="max-image-preview:large">
-  <script type="text/javascript">
-    window._wpemojiSettings = { "baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/14.0.0\/72x72\/", "ext": ".png", "svgUrl": "https:\/\/s.w.org\/images\/core\/emoji\/14.0.0\/svg\/", "svgExt": ".svg", "source": { "concatemoji": "https:\/\/pons.co.jp\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.2.5" } };
-    /*! This file is auto-generated */
-    !function (e, a, t) { var n, r, o, i = a.createElement("canvas"), p = i.getContext && i.getContext("2d"); function s(e, t) { p.clearRect(0, 0, i.width, i.height), p.fillText(e, 0, 0); e = i.toDataURL(); return p.clearRect(0, 0, i.width, i.height), p.fillText(t, 0, 0), e === i.toDataURL() } function c(e) { var t = a.createElement("script"); t.src = e, t.defer = t.type = "text/javascript", a.getElementsByTagName("head")[0].appendChild(t) } for (o = Array("flag", "emoji"), t.supports = { everything: !0, everythingExceptFlag: !0 }, r = 0; r < o.length; r++)t.supports[o[r]] = function (e) { if (p && p.fillText) switch (p.textBaseline = "top", p.font = "600 32px Arial", e) { case "flag": return s("\ud83c\udff3\ufe0f\u200d\u26a7\ufe0f", "\ud83c\udff3\ufe0f\u200b\u26a7\ufe0f") ? !1 : !s("\ud83c\uddfa\ud83c\uddf3", "\ud83c\uddfa\u200b\ud83c\uddf3") && !s("\ud83c\udff4\udb40\udc67\udb40\udc62\udb40\udc65\udb40\udc6e\udb40\udc67\udb40\udc7f", "\ud83c\udff4\u200b\udb40\udc67\u200b\udb40\udc62\u200b\udb40\udc65\u200b\udb40\udc6e\u200b\udb40\udc67\u200b\udb40\udc7f"); case "emoji": return !s("\ud83e\udef1\ud83c\udffb\u200d\ud83e\udef2\ud83c\udfff", "\ud83e\udef1\ud83c\udffb\u200b\ud83e\udef2\ud83c\udfff") }return !1 }(o[r]), t.supports.everything = t.supports.everything && t.supports[o[r]], "flag" !== o[r] && (t.supports.everythingExceptFlag = t.supports.everythingExceptFlag && t.supports[o[r]]); t.supports.everythingExceptFlag = t.supports.everythingExceptFlag && !t.supports.flag, t.DOMReady = !1, t.readyCallback = function () { t.DOMReady = !0 }, t.supports.everything || (n = function () { t.readyCallback() }, a.addEventListener ? (a.addEventListener("DOMContentLoaded", n, !1), e.addEventListener("load", n, !1)) : (e.attachEvent("onload", n), a.attachEvent("onreadystatechange", function () { "complete" === a.readyState && t.readyCallback() })), (e = t.source || {}).concatemoji ? c(e.concatemoji) : e.wpemoji && e.twemoji && (c(e.twemoji), c(e.wpemoji))) }(window, document, window._wpemojiSettings);
-  </script>
-  <style type="text/css">
-    img.wp-smiley,
-    img.emoji {
-      display: inline !important;
-      border: none !important;
-      box-shadow: none !important;
-      height: 1em !important;
-      width: 1em !important;
-      margin: 0 0.07em !important;
-      vertical-align: -0.1em !important;
-      background: none !important;
-      padding: 0 !important;
-    }
-  </style>
   <link rel="stylesheet" id="wp-block-library-css"
     href="https://pons.co.jp/wp-includes/css/dist/block-library/style.min.css?ver=6.2.5" type="text/css" media="all">
   <link rel="stylesheet" id="classic-theme-styles-css"
@@ -6803,22 +6780,6 @@
 
     .sd[data-s-c47e1866-f975-4865-a0cb-b1f931b5e0dd] {}
   </style>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <link rel="https://api.w.org/" href="https://pons.co.jp/wp-json/">
   <link rel="EditURI" type="application/rsd+xml" title="RSD" href="https://pons.co.jp/xmlrpc.php?rsd">
   <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="https://pons.co.jp/wp-includes/wlwmanifest.xml">
@@ -6946,37 +6907,60 @@
       </div>
     </article>
 
+
+
     <article id="member">
       <div class="content-wrap">
-        <!--<h2 class="top01"><span class="en">Member</span><span class="ja">メンバー</span></h2>!-->
-        <h2 class="under"><span class="en">Member</span><span class="ja">メンバー</span></h2>
-        <ul class="list-member">
-          <li>
-            <div class="bl-name">
-              <p class="position">代表</p>
-              <p class="name"><span class="ja">清水 弘太郎</span><span class="en -en">Shimizu Kotaro</span></p>
-            </div>
-            <div class="bl-profile">
-              <p>
-                三重大学医学部医学科を卒業後、麻酔科・形成外科の医師として臨床に従事。その後医療の現場での経験を活かし、企業向けの医療コンサルティング業務を開始。2022年動画マーケティング・医療コンサルティング事業を展開する株式会社ぽんすを代表取締役として創業。同2022年よりがん呼気スクリーニングデバイス日本総販売代理のMediScan株式会社取締役兼任。
-              </p>
-            </div>
-          </li>
-          <li>
-            <div class="bl-name">
-              <p class="position">マネージャー</p>
-              <p class="name"><span class="ja">佐藤 亮太</span><span class="en -en">Sato Ryota</span></p>
-            </div>
-            <div class="bl-profile">
-              <p>
-                大学院卒業後、2020年にビデオグラファーとして独立。 YouTubeコンサル会社でSNS講師を歴任し数々の事業に携わる。 2022年株式会社ぽんすWebマーケティング部マネージャーとして参画。
-                現在は多数のYouTubeチャンネルの立ち上げ・運用に携わり、PR動画制作での指揮も取っている。 コンテンツと市場を多角的に分析したロジカルかつ独創的な企画の提案を得意としている。
-              </p>
-            </div>
-          </li>
-        </ul>
+        <h2 class="under"><span class="en">Message</span><span class="ja">代表挨拶</span></h2>
+        <div class="message_contents_wrap">
+          <div class="message_contents_wrap_txt">
+            <p class="mb_25_pc mb_15 aos-init aos-animate" data-aos="fade">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+            <p class="mb_25_pc mb_15 aos-init aos-animate" data-aos="fade">
+              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+            <p class="mb_25_pc mb_15 aos-init" data-aos="fade">
+              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+          </div>
+          <div class="message_contents_wrap_img">
+            <img src="images/about-us-message.jpg" data-aos="fade"
+              class="aos-init aos-animate">
+            <p class="message_contents_wrap_img_txt aos-init" data-aos="fade">
+              <span class="message_contents_wrap_img_txt_position">代表</span>
+              <span class="message_contents_wrap_img_txt_name">
+                <span class="jp">清水 弘太郎</span>
+                <span class="en">Shimizu Kotaro</span>
+              </span>
+            </p>
+          </div>
+        </div>
       </div>
     </article>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <div data-s-42d5a125-f982-47f1-9e49-98de51751dfa="" class="sd appear">
