--- a/others.html
+++ b/others.html
@@ -99,10 +99,8 @@
       <div class="mv_inner">
         <div class="flex">
           <div class="left">
-            <h1 class="sp"
-              style="position: absolute;z-index: 2;left: 4%;top: 36%;text-align: center;color: #fff;font-size: 6vw;text-shadow: 0px 0px 10px rgba(29, 100, 109, 0.91), 0px 0px 10px rgba(29, 100, 109, 0.91);transform: translateY(-50%);display: grid;">
-              <b>クリニック専門</b><b>YouTube運用代行</b><b>MediTube</b></h1>
-            <h1 class="pc"><b>クリニック専門</b><b>YouTube運用代行MediTube</b></h1>
+            <h1 class="sp"><b>各ジャンルに合わせた戦略で</b><b>YouTubeの企画・制作</b><b>から運用まで</b><b>「ワンストップ」で提供します。</b></h1>
+            <h1 class="pc"><b>各ジャンルに合わせた戦略で</b><b>YouTubeの企画・制作から運用まで</b><b>「ワンストップ」で提供します。</b></h1>
             <p class="sub_ttl">クリニックの集患・採用をご支援</p>
           </div>
           <div class="right">
@@ -121,24 +119,37 @@
     </section>
 
 
-
-
-
-    <section class="section section--bggray">
-      <div class="layout-inner">
-        <section class="task">
-          <div class="sectionTitle">
-            <div class="sectionTitle__title">MediTubeが解決できる<span class="b">課題</span></div>
+    <article>
+      <section class="top_problem">
+        <div class="block tx_center">
+          <h2 class="red top_problem_title bold content_margin">以下のお悩みを弊社が<br class="shown_sp">解決いたします。
+          </h2>
+          <div class="problem_block">
+            <div class="problem_item">
+              <div class="problem_border_left"></div>
+              <p class="problem_text01 white bold lineheight">YouTubeチャンネルを<br>始めたいがどのような動画を<br>作ればいいのかわからない</p>
+              <div class="problem_border_right"></div>
+            </div>
+            <div class="problem_item">
+              <div class="problem_border_left"></div>
+              <p class="problem_text01 white bold lineheight">成果につながる動画を<br>どう作ればいいか<br>わからない</p>
+              <div class="problem_border_right"></div>
+            </div>
+            <div class="problem_item">
+              <div class="problem_border_left"></div>
+              <p class="problem_text01 white bold lineheight">動画の企画から運用まで<br>一貫してプロに任せたい</p>
+              <div class="problem_border_right"></div>
+            </div>
+            <div class="problem_item">
+              <div class="problem_border_left"></div>
+              <p class="problem_text01 white bold lineheight">YouTubeチャンネル運用の<br class="shown_pc">コスト感や<br>知識がないのが不安…
+              </p>
+              <div class="problem_border_right"></div>
+            </div>
           </div>
-          <ul class="task-list">
-            <li>クリニックの集患・採用
-            </li>
-            <li>クリニックに特化したYouTube<br class="view-pc">チャンネルの運用<br class="view-pc"></li>
-          </ul>
-        </section>
-      </div>
-    </section>
-
+        </div>
+      </section>
+    </article>
 
 
 
