--- a/others.html
+++ b/others.html
@@ -99,8 +99,8 @@
       <div class="mv_inner">
         <div class="flex">
           <div class="left">
-            <h1 class="sp"><b>各ジャンルに合わせた戦略で</b><b>YouTubeの企画・制作</b><b>から運用まで</b><b>「ワンストップ」で提供します。</b></h1>
-            <h1 class="pc"><b>各ジャンルに合わせた戦略で</b><b>YouTubeの企画・制作から運用まで</b><b>「ワンストップ」で提供します。</b></h1>
+            <h1 class="sp"><b>各ジャンルに合わせた戦略で</b><br><b>YouTubeの企画・制作</b><br><b>から運用まで</b><br><b>「ワンストップ」で提供します。</b></h1>
+            <h1 class="pc"><b>各ジャンルに合わせた戦略で</b><br><b>YouTubeの企画・制作から運用まで</b><br><b>「ワンストップ」で提供します。</b></h1>
             <p class="sub_ttl">クリニックの集患・採用をご支援</p>
           </div>
           <div class="right">
@@ -503,6 +503,21 @@
 
   </main>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500&amp;family=Roboto:wght@500&amp;display=swap"
+    rel="stylesheet">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+  <script type="module" src="js/common.js"></script>
+  <!-- フッター共通部分終わり -->
+
+  <script type="module" src="js/top.js"></script><iframe allow="join-ad-interest-group" data-tagging-id="G-GGK3BJ5KJH"
+    data-load-time="1719140910261" height="0" width="0"
+    src="https://td.doubleclick.net/td/ga/rul?tid=G-GGK3BJ5KJH&amp;gacid=2143685822.1719140910&amp;gtm=45je46j0v9135961715z89135945624za200zb9135945624&amp;dma=0&amp;gcd=13l3l3l3l1&amp;npa=0&amp;pscdl=noapi&amp;aip=1&amp;fledge=1&amp;frm=0&amp;z=714293244"
+    style="display: none; visibility: hidden;"></iframe>
 </body>
 
 </html>
