--- a/meditube.html
+++ b/meditube.html
@@ -42,6 +42,7 @@
   <link rel="stylesheet" href="css/modal-video.min.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="css/service.css">
+  <link rel="stylesheet" href="test.css">
 
 
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -128,7 +129,7 @@
       <div class="layout-inner">
         <section class="task">
           <div class="sectionTitle">
-            <div class="sectionTitle__title">MediTubeが解決できる<span class="b">課題</span></div>
+            <div class="sectionTitle__title b">MediTubeが解決できる<span class="b">課題</span></div>
           </div>
           <ul class="task-list">
             <li>クリニックの集患・採用
@@ -174,7 +175,7 @@
 
         <div class="reason tokium_reason">
           <div class="sectionTitle">
-            <div class="sectionTitle__title">サービス<span class="b">特徴</span></div>
+            <div class="sectionTitle__title b">サービス<span class="b">特徴</span></div>
           </div>
           <div class="tokium_reason_flex">
 
@@ -210,7 +211,7 @@
     <section class="p-main__resolution" id="service" style="margin-top: 0px;">
       <article class="reason tokium_reason">
         <div class="sectionTitle">
-          <div class="sectionTitle__title">サービス<span class="b">内容</span></div>
+          <div class="sectionTitle__title b">サービス<span class="b">内容</span></div>
         </div>
         <div class="p-main__resolution-sub">
           <div class="p-main__resolution-sub-title-box">
@@ -220,7 +221,6 @@
           </div>
           <div class="p-main__resolution-card-box">
             <div class="p-main__resolution-card-block">
-              <span class="p-main__resolution-card-type p-main__resolution-card-type-orange">手動</span>
               <div class="p-main__resolution-card-img-box">
                 <img class="p-main__resolution-card-img p-main__resolution-card-img01" src="images/conference-1-82.svg"
                   alt="イラスト">
@@ -229,7 +229,6 @@
 
             </div>
             <div class="p-main__resolution-card-block">
-              <span class="p-main__resolution-card-type p-main__resolution-card-type-orange">手動</span>
               <div class="p-main__resolution-card-img-box">
                 <img class="p-main__resolution-card-img p-main__resolution-card-img02" src="images/office-work-15.svg"
                   alt="イラスト">
@@ -238,7 +237,6 @@
 
             </div>
             <div class="p-main__resolution-card-block">
-              <span class="p-main__resolution-card-type p-main__resolution-card-type-orange">手動</span>
               <div class="p-main__resolution-card-img-box">
                 <img class="p-main__resolution-card-img p-main__resolution-card-img03"
                   src="images/data-analysis-45-46198.svg" alt="イラスト">
@@ -247,7 +245,6 @@
 
             </div>
             <div class="p-main__resolution-card-block">
-              <span class="p-main__resolution-card-type p-main__resolution-card-type-orange">手動</span>
               <div class="p-main__resolution-card-img-box">
                 <img class="p-main__resolution-card-img p-main__resolution-card-img04" src="images/chatting-40.svg"
                   alt="イラスト">
@@ -256,7 +253,6 @@
 
             </div>
             <div class="p-main__resolution-card-block">
-              <span class="p-main__resolution-card-type p-main__resolution-card-type-orange">手動</span>
               <div class="p-main__resolution-card-img-box">
                 <img class="p-main__resolution-card-img p-main__resolution-card-img05" src="images/video-call-2-94.svg"
                   alt="イラスト">
@@ -265,7 +261,6 @@
 
             </div>
             <div class="p-main__resolution-card-block">
-              <span class="p-main__resolution-card-type p-main__resolution-card-type-orange">手動</span>
               <div class="p-main__resolution-card-img-box">
                 <img class="p-main__resolution-card-img p-main__resolution-card-img06" src="images/team-work-3-37.svg"
                   alt="イラスト">
@@ -338,21 +333,22 @@
     <section class="cont9">
       <div class="sectionTitle">
         <div class="sectionTitle">
-          <div class="sectionTitle__title">ご料金</div>
+          <div class="sectionTitle__title b">ご料金</div>
         </div>
       </div>
+
       <div class="inner">
         <div class="table_wrap">
           <div class="scroll">
-            <table>
+            <table class="radius-table">
               <tbody>
                 <tr>
                   <td class="sticky "><b class="b">基本プラン表</b></td>
-                  <td class="bg_1"><span class="big">動画制作</span><br>プラン<span class="plan_t">動画制作をプロに外注。
+                  <td class="bg_1"><span class="big">動画制作<br>プラン</span><span class="plan_t">動画制作をプロに外注。
                       生まれた時間を企画等に充てることで、YouTubeの成功確度がグンと上がります。</span></td>
-                  <td class="bg_2"><span class="big">コンサル</span><br>プラン<span
+                  <td class="bg_2"><span class="big">コンサル<br>プラン</span><span
                       class="plan_t">再生数に大きく関わる「チャンネル設計・企画」を膨大な知見をもつプロにお任せ。さらに台本に関するフィードバックもサポート。</span></td>
-                  <td class="bg_3"><span class="big">運用代行</span><br>プラン<span
+                  <td class="bg_3"><span class="big">運用代行<br>プラン</span><span
                       class="plan_t">動画制作プランとコンサルプランを組み合わせた一気通貫プラン。クリニックの方々に必要なのは熱意と情熱だけ。</span></td>
                 </tr>
                 <tr>
@@ -433,15 +429,13 @@
             </table>
           </div>
         </div>
-        <p class="tb_btm_t">
-          その他、お客様の運用状況／サービス内容／ご希望に合わせてサービス内容や料金を柔軟にカスタマイズすることも可能です。<br>各プランの詳細内容についてはサービス紹介資料にてご確認ください。
-        </p>
-        <p class="link">
-          <li><a href="https://ssl.form-mailer.jp/fms/1bbc88d4823445" rel="noreferrer noopener"
-              target="_blank">資料ダウンロード</a>
-        </p>
+        <p class="tb_btm_t">その他、お客様の運用状況／サービス内容／ご希望に合わせてサービス内容や料金を柔軟にカスタマイズすることも可能です。<br>各プランの詳細内容についてはサービス紹介資料にてご確認ください。</p>
+        <p class="link"><a href="https://ssl.form-mailer.jp/fms/1bbc88d4823445" rel="noreferrer noopener"
+            target="_blank">資料ダウンロード</a></p>
       </div>
+
     </section>
+
 
 
 
