--- a/others.html
+++ b/others.html
@@ -185,7 +185,7 @@
 
         <div class="reason tokium_reason">
           <div class="sectionTitle">
-            <div class="sectionTitle__title">サービス<span class="b">特徴</span></div>
+            <div class="sectionTitle__title b">サービス<span class="b">特徴</span></div>
           </div>
           <div class="tokium_reason_flex">
 
@@ -221,7 +221,7 @@
     <section class="p-main__resolution" id="service" style="margin-top: 0px;">
       <article class="reason tokium_reason">
         <div class="sectionTitle">
-          <div class="sectionTitle__title">サービス<span class="b">内容</span></div>
+          <div class="sectionTitle__title b">サービス<span class="b">内容</span></div>
         </div>
         <div class="p-main__resolution-sub">
           <div class="p-main__resolution-sub-title-box">
@@ -231,7 +231,6 @@
           </div>
           <div class="p-main__resolution-card-box">
             <div class="p-main__resolution-card-block">
-              <span class="p-main__resolution-card-type p-main__resolution-card-type-orange">手動</span>
               <div class="p-main__resolution-card-img-box">
                 <img class="p-main__resolution-card-img p-main__resolution-card-img01" src="images/conference-1-82.svg"
                   alt="イラスト">
@@ -240,7 +239,6 @@
 
             </div>
             <div class="p-main__resolution-card-block">
-              <span class="p-main__resolution-card-type p-main__resolution-card-type-orange">手動</span>
               <div class="p-main__resolution-card-img-box">
                 <img class="p-main__resolution-card-img p-main__resolution-card-img02" src="images/office-work-15.svg"
                   alt="イラスト">
@@ -249,7 +247,6 @@
 
             </div>
             <div class="p-main__resolution-card-block">
-              <span class="p-main__resolution-card-type p-main__resolution-card-type-orange">手動</span>
               <div class="p-main__resolution-card-img-box">
                 <img class="p-main__resolution-card-img p-main__resolution-card-img03"
                   src="images/data-analysis-45-46198.svg" alt="イラスト">
@@ -258,7 +255,6 @@
 
             </div>
             <div class="p-main__resolution-card-block">
-              <span class="p-main__resolution-card-type p-main__resolution-card-type-orange">手動</span>
               <div class="p-main__resolution-card-img-box">
                 <img class="p-main__resolution-card-img p-main__resolution-card-img04" src="images/chatting-40.svg"
                   alt="イラスト">
@@ -267,7 +263,6 @@
 
             </div>
             <div class="p-main__resolution-card-block">
-              <span class="p-main__resolution-card-type p-main__resolution-card-type-orange">手動</span>
               <div class="p-main__resolution-card-img-box">
                 <img class="p-main__resolution-card-img p-main__resolution-card-img05" src="images/video-call-2-94.svg"
                   alt="イラスト">
@@ -276,7 +271,6 @@
 
             </div>
             <div class="p-main__resolution-card-block">
-              <span class="p-main__resolution-card-type p-main__resolution-card-type-orange">手動</span>
               <div class="p-main__resolution-card-img-box">
                 <img class="p-main__resolution-card-img p-main__resolution-card-img06" src="images/team-work-3-37.svg"
                   alt="イラスト">
@@ -349,7 +343,7 @@
     <section class="cont9">
       <div class="sectionTitle">
         <div class="sectionTitle">
-          <div class="sectionTitle__title">ご料金</div>
+          <div class="sectionTitle__title b">ご料金</div>
         </div>
       </div>
       <div class="inner">
