--- a/others.html
+++ b/others.html
@@ -48,6 +48,8 @@
   <link rel="stylesheet" href="./assets/css/reset.css">
 
 
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&amp;display=swap" rel="stylesheet">
+
   <link rel="stylesheet" id="app-style-css"
     href="https://www.keihi.com/app/themes/beartail/assets/css/common.css?ver=1718938794" type="text/css" media="all">
   <link rel="stylesheet" href="https://www.keihi.com/app/themes/beartail/assets/css/common_parts.css?1718938794">
@@ -96,25 +98,17 @@
 
   <main>
     <section class="mv">
-      <div class="mv_inner">
-        <div class="flex">
-          <div class="left">
-            <h1 class="sp"><b>各ジャンルに合わせた戦略で</b><br><b>YouTubeの企画・制作</b><br><b>から運用まで</b><br><b>「ワンストップ」で提供します。</b></h1>
-            <h1 class="pc"><b>各ジャンルに合わせた戦略で</b><br><b>YouTubeの企画・制作から運用まで</b><br><b>「ワンストップ」で提供します。</b></h1>
-            <p class="sub_ttl">クリニックの集患・採用をご支援</p>
-          </div>
-          <div class="right">
-            <picture>
-              <source media="(max-width: 768px)" srcset="./assets/images/sp_mv_img_1.jpg">
-              <img src="./assets/images/mv_img_1.jpg">
-            </picture>
-          </div>
-        </div>
-        <ul class="taglist">
-          <li><span class="b">医療専門</span>の<br>YouTube運用代行</li>
-          <li>医師支援で<span class="b">専門的な</span><br><span>発信</span>も安心！</li>
-          <li>安定した<br><span class="b">集患・採用可能！</span></li>
-        </ul>
+      <div class="mv-pc">
+        <img src="./assets/images/FV_others.jpg" alt="各ジャンルに合わせた戦略でYouTubeの企画・制作から運用まで「ワンストップ」で提供します。　クリニックの集患・採用をご支援
+                    ・医療専門のYouTube運用代行
+                    ・医師支援で専門的な発信も安心！
+                    ・安定した集患・採用可能！">
+      </div>
+      <div class="mv-sp">
+        <img src="./assets/images/FVSP_others.jpg" alt="各ジャンルに合わせた戦略でYouTubeの企画・制作から運用まで「ワンストップ」で提供します。　クリニックの集患・採用をご支援
+                    ・医療専門のYouTube運用代行
+                    ・医師支援で専門的な発信も安心！
+                    ・安定した集患・採用可能！">
       </div>
     </section>
 
@@ -282,56 +276,63 @@
       </article>
     </section>
 
-    <section class="cont7">
-      <h2>サービスご利用<b class="small">の</b><span class="b">流れ</span></h2>
-      <div class="inner">
-        <div class="list">
-          <div class="item">
-            <figure>
-              <img src="./assets/images/cont7_icon1.png" alt="ヒアリング">
-            </figure>
-            <div class="text">
-              <div class="ttl">
-                <p>Step 01</p>
-                <h3>無料のご相談・ヒアリング<span>(毎月10院限定)</span></h3>
+    <section class="cont7" id="link_3">
+      <div class="cont7-wapper">
+        <h2 class="b">サービスご利用<b class="small">の</b><span class="b">流れ</span></h2>
+        <div class="inner">
+          <div class="list">
+            <div class="item">
+              <figure class="cont7-img">
+                <img src="./assets/images/cont7_icon1.png" alt="ヒアリング">
+              </figure>
+              <div class="cont7-text">
+                <div class="ttl">
+                  <p class="cont7-step">Step 01</p>
+                  <h3 class="cont7-ttl">無料のご相談<span style="letter-spacing: -5;">・</span><br class="cont7-ttl_sp">ヒアリング<span
+                      style="font-size: 16px"><br class="cont7-ttl_sp">(毎月10院限定)</span>
+                  </h3>
+                </div>
+                <p class="cont7-description">
+                  事前にリサーチ・分析を行わせていただいたうえでご相談を実施。<br>リサーチ・分析結果のご報告や現状の課題点について詳細にヒアリング。</p>
               </div>
-              <p>事前にリサーチ・分析を行わせていただいたうえでご相談を実施。<br>リサーチ・分析結果のご報告や現状の課題点について詳細にヒアリング。</p>
             </div>
-          </div>
-          <div class="item">
-            <figure>
-              <img src="./assets/images/cont7_icon2.png" alt="コミュニケーション">
-            </figure>
-            <div class="text">
-              <div class="ttl">
-                <p>Step 02</p>
-                <h3>悩みに対して、リサーチ&amp;ご提案</h3>
+            <div class="item">
+              <figure class="cont7-img">
+                <img src="./assets/images/cont7_icon2.png" alt="コミュニケーション">
+              </figure>
+              <div class="cont7-text">
+                <div class="ttl">
+                  <p class="cont7-step">Step 02</p>
+                  <h3 class="cont7-ttl">悩みに対して、<br class="cont7-ttl_sp">リサーチ&amp;ご提案</h3>
+                </div>
+                <p class="cont7-description">
+                  ヒアリングをし、浮き彫りとなった課題に対して徹底的にリサーチを実施。<br>適切な改善策をお客様に合わせた内容でご提案。</p>
               </div>
-              <p>ヒアリングをし、浮き彫りとなった課題に対して徹底的にリサーチを実施。<br>適切な改善策をお客様に合わせた内容でご提案。</p>
             </div>
-          </div>
-          <div class="item">
-            <figure>
-              <img src="./assets/images/cont7_icon3.png" alt="検討">
-            </figure>
-            <div class="text">
-              <div class="ttl">
-                <p>Step 03</p>
-                <h3>ご発注を検討</h3>
+            <div class="item">
+              <figure class="cont7-img">
+                <img src="./assets/images/cont7_icon3.png" alt="検討">
+              </figure>
+              <div class="cont7-text">
+                <div class="ttl">
+                  <p class="cont7-step">Step 03</p>
+                  <h3 class="cont7-ttl">ご発注を検討</h3>
+                </div>
+                <p class="cont7-description">
+                  ご提案内容についてじっくり考えていただく。<br>何度もヒアリングをして納得のいく解決策になるまで施策内容を修正することも適宜行っております。</p>
               </div>
-              <p>ご提案内容についてじっくり考えていただく。<br>何度もヒアリングをして納得のいく解決策になるまで施策内容を修正することも適宜行っております。</p>
             </div>
-          </div>
-          <div class="item">
-            <figure>
-              <img src="./assets/images/cont7_icon4.png" alt="ご成約">
-            </figure>
-            <div class="text">
-              <div class="ttl">
-                <p>プロジェクト開始！</p>
-                <h3>無料のご相談・ヒアリング<span>(毎月10院限定)</span></h3>
+            <div class="item">
+              <figure class="cont7-img">
+                <img src="./assets/images/cont7_icon4.png" alt="ご成約">
+              </figure>
+              <div class="cont7-text">
+                <div class="ttl">
+                  <p class="cont7-step">Step 04</p>
+                  <h3 class="cont7-ttl">プロジェクト<br class="cont7-ttl_sp">開始！</h3>
+                </div>
+                <p class="cont7-description">ご提案内容について合意に至りましたら、プロジェクトを開始いたします。</p>
               </div>
-              <p>ご提案内容について合意に至りましたら、プロジェクトを開始いたします。</p>
             </div>
           </div>
         </div>
@@ -340,111 +341,116 @@
 
 
 
-    <section class="cont9">
-      <div class="sectionTitle">
-        <div class="sectionTitle">
-          <div class="sectionTitle__title b">ご料金</div>
-        </div>
-      </div>
-      <div class="inner">
-        <div class="table_wrap">
-          <div class="scroll">
-            <table>
-              <tbody>
-                <tr>
-                  <td class="sticky "><b class="b">基本プラン表</b></td>
-                  <td class="bg_1"><span class="big">動画制作</span><br>プラン<span class="plan_t">動画制作をプロに外注。
-                      生まれた時間を企画等に充てることで、YouTubeの成功確度がグンと上がります。</span></td>
-                  <td class="bg_2"><span class="big">コンサル</span><br>プラン<span
-                      class="plan_t">再生数に大きく関わる「チャンネル設計・企画」を膨大な知見をもつプロにお任せ。さらに台本に関するフィードバックもサポート。</span></td>
-                  <td class="bg_3"><span class="big">運用代行</span><br>プラン<span
-                      class="plan_t">動画制作プランとコンサルプランを組み合わせた一気通貫プラン。クリニックの方々に必要なのは熱意と情熱だけ。</span></td>
-                </tr>
-                <tr>
-                  <td class="sticky ">料金体系<br>月額<span class="small">（税別）</span></td>
-                  <td>150,000<span>円〜</span></td>
-                  <td>400,000<span>円</span></td>
-                  <td>800,000<span>円</span></td>
-                </tr>
-                <tr>
-                  <td class="sticky ">チャンネル設計</td>
-                  <td>ー</td>
-                  <td>◯</td>
-                  <td>◯</td>
-                </tr>
-                <tr>
-                  <td class="sticky ">企画</td>
-                  <td>ー</td>
-                  <td>ー</td>
-                  <td>◯</td>
-                </tr>
-                <tr>
-                  <td class="sticky ">サムネイル</td>
-                  <td>ー</td>
-                  <td>ー</td>
-                  <td>◯</td>
-                </tr>
-                <tr>
-                  <td class="sticky ">台本アドバイス</td>
-                  <td>ー</td>
-                  <td>◯</td>
-                  <td>◯
-                  </td>
-                </tr>
-                <tr>
-                  <td class="sticky ">動画編集</td>
-                  <td>◯</td>
-                  <td>ー</td>
-                  <td>◯
-                  </td>
-                </tr>
-                <tr>
-                  <td class="sticky ">動画編集<br>アドバイス</td>
-                  <td>ー</td>
-                  <td>◯</td>
-                  <td>◯</td>
-                </tr>
-                <tr>
-                  <td class="sticky ">投稿</td>
-                  <td>ー</td>
-                  <td>ー</td>
-                  <td>◯</td>
-                </tr>
-                <tr>
-                  <td class="sticky ">分析・改善</td>
-                  <td>ー</td>
-                  <td>◯</td>
-                  <td>◯</td>
-                </tr>
-                <tr>
-                  <td class="sticky ">チャットサポート</td>
-                  <td>◯</td>
-                  <td>◯</td>
-                  <td>◯</td>
-                </tr>
-                <tr>
-                  <td class="sticky ">オンライン<br>ミーティング</td>
-                  <td>ー</td>
-                  <td>◯</td>
-                  <td>◯</td>
-                </tr>
-                <tr>
-                  <td class="sticky ">チャンネル運用サポート</td>
-                  <td>ー</td>
-                  <td>ー</td>
-                  <td>◯</td>
-                </tr>
-              </tbody>
-            </table>
+    <section class="cont9" id="link_4">
+      <div class="cont9-wrapper">
+        <h2 class="b">ご料金</h2>
+        <div class="inner">
+          <div class="text_sp">※横スクロールで詳細を確認できます。</div>
+          <div class="table_wrap">
+            <div class="scroll">
+              <table>
+                <tbody>
+                  <tr>
+                    <td class="sticky" style="font-size:28px"><b class="b">基本<br class="table_sp">プラン表</b></td>
+                    <td class="bg_1">
+                      <div class="big">動画制作<br>プラン</div>
+                      <div class="plan_t">動画制作をプロに外注。
+                        生まれた時間を企画等に充てることで、YouTubeの成功確度がグンと上がります。</div>
+                    </td>
+                    <td class="bg_2">
+                      <div class="big">コンサル<br>プラン</div>
+                      <div class="plan_t">
+                        再生数に大きく関わる「チャンネル設計・企画」を膨大な知見をもつプロにお任せ。さらに台本に関するフィードバックもサポート。</div>
+                    </td>
+                    <td class="bg_3">
+                      <div class="big">運用代行<br>プラン</div>
+                      <div class="plan_t">
+                        動画制作プランとコンサルプランを組み合わせた一気通貫プラン。クリニックの方々に必要なのは熱意と情熱だけ。</div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="sticky">料金体系<br>月額<span class="small">（税別）</span></td>
+                    <td>150,000<span>円〜</span></td>
+                    <td>400,000<span>円</span></td>
+                    <td>800,000<span>円</span></td>
+                  </tr>
+                  <tr>
+                    <td class="sticky">チャンネル設計</td>
+                    <td style="color: #bfbfbf">ー</td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                  </tr>
+                  <tr>
+                    <td class="sticky">企画</td>
+                    <td style="color: #bfbfbf">ー</td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                  </tr>
+                  <tr>
+                    <td class="sticky">サムネイル</td>
+                    <td style="color: #bfbfbf">ー</td>
+                    <td style="color: #bfbfbf">ー</td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                  </tr>
+                  <tr>
+                    <td class="sticky">台本<br class="table_sp">アドバイス</td>
+                    <td style="color: #bfbfbf">ー</td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                  </tr>
+                  <tr>
+                    <td class="sticky">動画編集</td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                    <td style="color: #bfbfbf">ー</td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                  </tr>
+                  <tr>
+                    <td class="sticky">動画編集<br>アドバイス</td>
+                    <td style="color: #bfbfbf">ー</td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                  </tr>
+                  <tr>
+                    <td class="sticky">投稿</td>
+                    <td style="color: #bfbfbf">ー</td>
+                    <td style="color: #bfbfbf">ー</td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                  </tr>
+                  <tr>
+                    <td class="sticky">分析・改善</td>
+                    <td style="color: #bfbfbf">ー</td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                  </tr>
+                  <tr>
+                    <td class="sticky">チャット<br class="table_sp">サポート</td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                  </tr>
+                  <tr>
+                    <td class="sticky">オンライン<br>ミーティング</td>
+                    <td style="color: #bfbfbf">ー</td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                  </tr>
+                  <tr>
+                    <td class="sticky">チャンネル<br>運用サポート</td>
+                    <td style="color: #bfbfbf">ー</td>
+                    <td style="color: #bfbfbf">ー</td>
+                    <td><img class="circle" style="width: auto;" src="./assets/images/circle_icon.png" alt="⚪︎"></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <p class="tb_btm_t">
+            その他、お客様の運用状況／サービス内容／ご希望に合わせてサービス内容や料金を柔軟にカスタマイズすることも可能です。<br>各プランの詳細内容についてはサービス紹介資料にてご確認ください。
+          </p>
+          <div class="link">
+            <a href="https://ssl.form-mailer.jp/fms/1bbc88d4823445" rel="noreferrer noopener" target="_blank">資料ダウンロード</a>
           </div>
         </div>
-        <p class="tb_btm_t">
-          その他、お客様の運用状況／サービス内容／ご希望に合わせてサービス内容や料金を柔軟にカスタマイズすることも可能です。<br>各プランの詳細内容についてはサービス紹介資料にてご確認ください。
-        </p>
-        <p class="link">
-          <li><a href="https://ssl.form-mailer.jp/fms/1bbc88d4823445" rel="noreferrer noopener"
-              target="_blank">資料ダウンロード</a>
-        </p>
       </div>
     </section>
 
